--- a/cwatland-lt.github.io/package.json
+++ b/cwatland-lt.github.io/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
