--- a/cwatland-lt.github.io/package.json
+++ b/cwatland-lt.github.io/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "animejs": "^3.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
